Added and applied checkstyle